fix ARGLINE for java 9 or latter